opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_compat"
bug-reports: "https://github.com/janestreet/core_compat/issues"
dev-repo: "git+https://github.com/janestreet/core_compat.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_compat/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.08.0"}
  "core_kernel" {>= "v0.15" & < "v0.16"}
  "core_unix"   {>= "v0.15" & < "v0.16"}
  "dune"        {>= "2.0.0"}
]
synopsis: "Compatibility for core 0.14"
description: "
Compatibility wrapper to make it possible to have code compatible with both Core 0.14 and 0.15.
"
