(library (name core_compat) (modules core_compat) (public_name core_compat)
 (libraries core_kernel.core core.core_unix core.command_unix core.date_unix
  core.filename_unix core.signal_unix core.sys_unix core.core_thread
  core.time_unix core.time_ns_unix core_kernel.version_util core.interval_lib
  core.time_interface)
 (preprocess no_preprocessing))